# SimpleAgents

./: CNAME  CODING_GUIDELINES.md  Cargo.toml  OPTIMISATION.md  README.md  SCRATCHPAD.md  TODO.md
.factory/: settings.json
crates/simple-agents-cache/: Cargo.toml
crates/simple-agents-cache/src/: lib.rs  memory.rs  noop.rs
crates/simple-agents-providers/: Cargo.toml  README.md  run_integration_tests.sh
crates/simple-agents-providers/examples/: test_local_api.rs
crates/simple-agents-providers/src/: lib.rs  retry.rs  utils.rs
crates/simple-agents-providers/src/anthropic/: error.rs  mod.rs  models.rs
crates/simple-agents-providers/src/openai/: error.rs  mod.rs  models.rs
crates/simple-agents-providers/tests/: README.md  openai_integration.rs
crates/simple-agents-types/: Cargo.toml  README.md  TEST_GUIDE.md  TODO.md
crates/simple-agents-types/examples/: basic_usage.rs  mock_provider.rs
crates/simple-agents-types/src/: cache.rs  coercion.rs  config.rs  error.rs  lib.rs  message.rs  provider.rs  request.rs  response.rs  router.rs  validation.rs
crates/simple-agents-types/tests/: integration_test.rs
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  QUICKSTART.md  README.md  USAGE.md  package.json
research/: README.md  baml-analysis.md  baml-moat.md  implementation-plan.md  litellm-analysis.md  mvp-scope-update.md
