[package]
name = "simple-agents-providers"
version = "0.1.0"
edition = "2021"
authors = ["SimpleAgents Contributors"]
description = "LLM provider implementations for SimpleAgents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/SimpleAgents"

[dependencies]
simple-agents-types = { path = "../simple-agents-types", version = "0.1.0" }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.6"
